# gigvora-landing

./: .gitignore  README.monorepo.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/analytics-python/: pyproject.toml
apps/analytics-python/app/: _obs.py  ads_analytics_performance.py  ads_manager_builder.py  ads_ops.py  agency.py  agency_management_dashboard.py  billing_invoices_tax.py  booking.py  calendar.py  calls.py  client_dashboard.py  companies.py  contracts_sow_acceptance.py  customer_service.py  dispute_ops.py  donations_purchases_commerce.py  enterprise_connect.py  enterprise_dashboard.py  entitlements.py  events.py  feed.py  finance_admin.py  gigs_browse.py  groups.py  identity.py  inbox.py  internal_admin_login_terminal.py  internal_admin_shell.py  interview_planning.py  job_applications.py  jobs_browse.py  jobs_studio.py  launchpad_studio_tasks_team.py  main.py  map_views_geo_intel.py  marketing.py  master_settings_backbone.py  media.py  moderator_dashboard.py  network.py  (+26 more)
apps/analytics-python/tests/: test_companies.py  test_enterprise_qa.py  test_entitlements.py  test_feed.py  test_identity.py  test_marketing.py  test_network.py  test_notifications.py  test_overlays.py  test_profiles.py  test_search.py  test_settings.py  test_shell.py
apps/ml-python/: Dockerfile  pyproject.toml
apps/ml-python/app/: _obs.py  _registry.py  ads_analytics_performance.py  ads_manager_builder.py  ads_ops.py  agency.py  agency_management_dashboard.py  billing_invoices_tax.py  (+48 more)
(+2255 files in other folders)
