[project]
name = "gigvora-ml"
version = "0.3.0"
description = "Gigvora ML service: ranking, matching, moderation (real CPU models)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "onnxruntime>=1.18",
  "redis>=5.0",
  "httpx>=0.27",
  "structlog>=24.4",
  "prometheus-client>=0.20",
  "asyncpg>=0.29",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.0",
  "torch>=2.2",
]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]
